--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+ <head>
+  <link rel="stylesheet" type="text/css" href="main.css">
+ </head>
  <body>
     Hello
   </body>
