--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <link rel="stylesheet" type="text/css" href="main.css">
  </head>
  <body>
-    Hello
+  <p><a href="">Sign Up for Wholesale Membership</a></p>
   </body>
 </html>
