--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <link rel="stylesheet" type="text/css" href="../main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
  </head>
  <body>
-  <p><a href="https://www.doterra.com/US/en/site/jamiehugh" class="">Sign Up for Wholesale Membership</a></p>
+  <p><a href="https://www.doterra.com/US/en/site/jamiehugh">Sign Up for Wholesale Membership</a></p> 
+  <p><a href="https://www.facebook.com/savvyesthetics">Savvy Esthetics on Facebook</a></p>
   </body>
 </html>
