--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
  </head>
  <body>
+  <h1>This site is under construction</h1>
   <p><a href="https://www.doterra.com/US/en/site/jamiehugh">Sign Up for Wholesale Membership</a></p> 
   <p><a href="https://www.facebook.com/savvyesthetics">Savvy Esthetics on Facebook</a></p>
   </body>
